--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         
         <div class="price-card">
             <h3>1 Game / Month</h3>
-            <div class="price-value">250K</div>
+            <div class="price-value">$10</div>
             <ul>
                 <li>✔ Nhận 1 game bất kỳ</li>
                 <li>✔ Hỗ trợ đầy đủ</li>
@@ -75,20 +75,11 @@
             </ul>
         </div>
 
-        <div class="price-card popular">
-            <div class="tag-popular">Phổ biến</div>
-            <h3>All Games / Month</h3>
-            <div class="price-value">300K</div>
-            <ul>
-                <li>✔ Dùng toàn bộ scripts</li>
-                <li>✔ Update liên tục</li>
-                <li class="disable">✖ Lifetime</li>
-            </ul>
-        </div>
 
-        <div class="price-card">
+            <div class="price-card popular">
+            <div class="tag-popular">Phổ biến</div>
             <h3>1 Game Lifetime</h3>
-            <div class="price-value">500K</div>
+            <div class="price-value">$20</div>
             <ul>
                 <li>✔ Sở hữu 1 game trọn đời</li>
                 <li>✔ Update trọn đời</li>
@@ -120,3 +111,4 @@
 
 </body>
 </html>
+
