--- a/index.html
+++ b/index.html
@@ -58,6 +58,47 @@
 
 <!-- PAGINATION -->
 <div id="pagination" class="pagination"></div>
+<div class="price-plans">
+    <h2 class="price-title">Gói Thành Viên</h2>
+
+    <div class="price-grid-3">
+
+        <!-- Cột 1 -->
+        <div class="price-card">
+            <h3>1 Game / Tháng</h3>
+            <div class="price-value">250K</div>
+            <ul>
+                <li>✔ Nhận 1 game bất kỳ</li>
+                <li>✔ Update liên tục</li>
+                <li>✖ Không bao gồm full game</li>
+            </ul>
+        </div>
+
+        <!-- Cột 2 – Popular -->
+        <div class="price-card popular">
+            <div class="tag-popular">Phổ biến</div>
+            <h3>1 Game Trọn Đời</h3>
+            <div class="price-value">500K</div>
+            <ul>
+                <li>✔ Sở hữu vĩnh viễn</li>
+                <li>✔ Update trọn đời</li>
+                <li>✖ Không bao gồm full game</li>
+            </ul>
+        </div>
+
+        <!-- Cột 3 -->
+        <div class="price-card">
+            <h3>Full Game Trọn Đời</h3>
+            <div class="price-value">$150</div>
+            <ul>
+                <li>✔ Truy cập toàn bộ scripts</li>
+                <li>✔ Update mãi mãi</li>
+                <li>✔ Ưu tiên support</li>
+            </ul>
+        </div>
+
+    </div>
+</div>
 
 <!-- PRICE TABLE -->
 <div class="price-plans">
@@ -111,4 +152,11 @@
 
 </body>
 </html>
+#particles-js {
+    height: 120px !important; /* giảm chiều cao nền */
+}
+.hero-section {
+    margin-bottom: 10px;
+}
+
 
