--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <!-- Cột 1 -->
         <div class="price-card">
             <h3>1 Game / Tháng</h3>
-            <div class="price-value">250K</div>
+            <div class="price-value">$10</div>
             <ul>
                 <li>✔ Nhận 1 game bất kỳ</li>
                 <li>✔ Update liên tục</li>
-                <li>✖ Không bao gồm full game</li>
+                <li class="disable">✖ Không bao gồm full game</li>
             </ul>
         </div>
 
@@ -78,11 +78,11 @@
         <div class="price-card popular">
             <div class="tag-popular">Phổ biến</div>
             <h3>1 Game Trọn Đời</h3>
-            <div class="price-value">500K</div>
+            <div class="price-value">$20</div>
             <ul>
                 <li>✔ Sở hữu vĩnh viễn</li>
                 <li>✔ Update trọn đời</li>
-                <li>✖ Không bao gồm full game</li>
+                <li class="disable">✖ Không bao gồm full game</li>
             </ul>
         </div>
 
@@ -119,6 +119,7 @@
 .hero-section {
     margin-bottom: 10px;
 }
+
 
 
 
