--- a/index.html
+++ b/index.html
@@ -113,12 +113,7 @@
 
 </body>
 </html>
-#particles-js {
-    height: 120px !important; /* giảm chiều cao nền */
-}
-.hero-section {
-    margin-bottom: 10px;
-}
+Official Yakult Ipramovic Web.
 
 
 
