--- a/index.html
+++ b/index.html
@@ -47,14 +47,23 @@
         <p class="hero-stats">🔥 Hiện có <span id="totalScripts">0</span> script VIP!</p>
 
         <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
-        <a href="#games" class="btn-hero">Xem danh sách game</a>
+        <a href="#games" class="btn-hero">📜 Danh sách Script</a>
+
+        <a href="#shop" class="btn-hero btn-shop">💎 Shop Tài Nguyên</a>
+
     </header>
 
     <!-- GAME LIST -->
     <section id="games">
-        <h2 class="section-title">Danh sách game</h2>
+        <h2 class="section-title">Danh Sách Script</h2>
 
         <div class="game-grid" id="gameList"></div>
+    <!-- SHOP TÀI NGUYÊN -->
+    <section id="shop">
+        <h2 class="section-title">Shop Tài Nguyên</h2>
+    
+        <div class="game-grid" id="shopList"></div>
+    </section>
 
 <!-- PAGINATION -->
 <div id="pagination" class="pagination"></div>
@@ -114,6 +123,7 @@
 </body>
 </html>
 Official Yakult Ipramovic Web.
+
 
 
 
