--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
         <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
         <a href="#games" class="btn-hero">📜 Danh sách Script</a>
+        
+        <a href="shop.html" class="btn-hero btn-shop">💎 Shop Tài Nguyên</a>
 
-        <a href="#shop" class="btn-hero btn-shop">💎 Shop Tài Nguyên</a>
 
     </header>
 
@@ -123,6 +124,7 @@
 </body>
 </html>
 Official Yakult Ipramovic Web.
+
 
 
 
