--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
         <p class="hero-subtitle">Script & Mod Game VIP • Made by xGh0stZ</p>
 
-        <p class="hero-stats">🔥 Hiện có <span id="totalScripts">0</span> script VIP!</p>
+        <p class="hero-stats">
+    🔥 Hiện có <span id="totalScripts" class="script-count">0</span> script VIP!
+</p>
+
 
         <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
         <a href="#games" class="btn-hero">📜 Danh sách Script</a>
@@ -118,6 +121,7 @@
 </body>
 </html>
 Official Yakult Ipramovic Web.
+
 
 
 
