--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Mod 24H</title>
+    <title>Game Mod 24H – Yakult Ipramovic</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -15,7 +15,7 @@
     <!-- Particles.js -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-    <!-- 🌨 Snowfall -->
+    <!-- ❄ Snowfall -->
     <script>
         function createSnow() {
             const snow = document.createElement("div");
@@ -33,10 +33,10 @@
 
 <body>
 
-    <!-- PARTICLES -->
+    <!-- PARTICLES BACKGROUND -->
     <div id="particles-js"></div>
 
-    <!-- HERO -->
+    <!-- HERO SECTION -->
     <header class="hero-section compact">
         <img src="assets/img/logo.png" class="hero-avatar">
 
@@ -45,16 +45,11 @@
         <p class="hero-subtitle">Script & Mod Game VIP • Made by xGh0stZ</p>
 
         <p class="hero-stats">
-    🔥 Hiện có <span id="totalScripts" class="script-count">0</span> script VIP!
-</p>
-
+            🔥 Hiện có <span id="totalScripts" class="script-count">0</span> script VIP!
+        </p>
 
         <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
         <a href="#games" class="btn-hero">📜 Danh sách Script</a>
-        
-
-
-
     </header>
 
     <!-- GAME LIST -->
@@ -63,55 +58,54 @@
 
         <div class="game-grid" id="gameList"></div>
 
-<!-- PAGINATION -->
-<div id="pagination" class="pagination"></div>
-<div class="price-plans">
-    <h2 class="price-title">Gói Thành Viên</h2>
+        <!-- PAGINATION -->
+        <div id="pagination" class="pagination"></div>
+    </section>
 
-    <div class="price-grid-3">
+    <!-- PRICE PLANS -->
+    <div class="price-plans">
+        <h2 class="price-title">Gói Thành Viên</h2>
 
-        <!-- Cột 1 -->
-        <div class="price-card">
-            <h3>1 Game / Tháng</h3>
-            <div class="price-value">$10</div>
-            <ul>
-                <li>✔ Nhận 1 game bất kỳ</li>
-                <li>✔ Update liên tục</li>
-                <li class="disable">✖ Không bao gồm full game</li>
-            </ul>
+        <div class="price-grid-3">
+
+            <div class="price-card">
+                <h3>1 Game / Tháng</h3>
+                <div class="price-value">$10</div>
+                <ul>
+                    <li>✔ Nhận 1 game bất kỳ</li>
+                    <li>✔ Update liên tục</li>
+                    <li class="disable">✖ Không bao gồm full game</li>
+                </ul>
+            </div>
+
+            <div class="price-card popular">
+                <div class="tag-popular">Phổ biến</div>
+                <h3>1 Game Trọn Đời</h3>
+                <div class="price-value">$20</div>
+                <ul>
+                    <li>✔ Sở hữu vĩnh viễn</li>
+                    <li>✔ Update trọn đời</li>
+                    <li class="disable">✖ Không bao gồm full game</li>
+                </ul>
+            </div>
+
+            <div class="price-card">
+                <h3>Full Game Trọn Đời</h3>
+                <div class="price-value">$150</div>
+                <ul>
+                    <li>✔ Truy cập toàn bộ scripts</li>
+                    <li>✔ Update mãi mãi</li>
+                    <li>✔ Ưu tiên support</li>
+                </ul>
+            </div>
+
         </div>
-
-        <!-- Cột 2 – Popular -->
-        <div class="price-card popular">
-            <div class="tag-popular">Phổ biến</div>
-            <h3>1 Game Trọn Đời</h3>
-            <div class="price-value">$20</div>
-            <ul>
-                <li>✔ Sở hữu vĩnh viễn</li>
-                <li>✔ Update trọn đời</li>
-                <li class="disable">✖ Không bao gồm full game</li>
-            </ul>
-        </div>
-
-        <!-- Cột 3 -->
-        <div class="price-card">
-            <h3>Full Game Trọn Đời</h3>
-            <div class="price-value">$150</div>
-            <ul>
-                <li>✔ Truy cập toàn bộ scripts</li>
-                <li>✔ Update mãi mãi</li>
-                <li>✔ Ưu tiên support</li>
-            </ul>
-        </div>
-
     </div>
-</div>
-
 
     <!-- DATA -->
     <script src="assets/data/games.js"></script>
 
-    <!-- MAIN UI -->
+    <!-- MAIN UI HANDLER -->
     <script src="assets/js/app.js"></script>
 
     <script>
@@ -120,13 +114,3 @@
 
 </body>
 </html>
-Official Yakult Ipramovic Web.
-
-
-
-
-
-
-
-
-
