--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Mod 24H – Yakult Ipramovic</title>
+    <title>Game Mod 24H</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -51,6 +51,10 @@
         <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
         <a href="#games" class="btn-hero">📜 Danh sách Script</a>
     </header>
+<section class="best-seller">
+    <h2 class="section-title">🔥 Top 4 Game Bán Chạy Nhất</h2>
+    <div class="game-grid" id="bestList"></div>
+</section>
 
     <!-- GAME LIST -->
     <section id="games">
@@ -115,4 +119,5 @@
 
 </body>
 </html>
+
 
