--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 <section class="best-seller">
     <h2 class="section-title">🔥 Top 4 Game Bán Chạy Nhất</h2>
-    <div class="game-grid" id="bestList"></div>
+    <div id="bestList"></div>
 </section>
 
     <!-- GAME LIST -->
@@ -119,5 +119,6 @@
 
 </body>
 </html>
+
 
 
