--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <a href="#games" class="btn-hero">📜 Danh sách Script</a>
     </header>
 <section class="best-seller">
-    <h2 class="section-title">🔥 Top 4 Game Bán Chạy Nhất</h2>
-    <div id="bestList"></div>
+<h2 class="section-title">🔥 Top Bán Chạy Nhất</h2>
+<div id="bestList" class="best-grid"></div>
 </section>
 
     <!-- GAME LIST -->
@@ -119,6 +119,7 @@
 
 </body>
 </html>
+
 
 
 
