--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <ul>
                 <li>✔ Nhận 1 game bất kỳ</li>
                 <li>✔ Update liên tục</li>
-                <li class="disable">✖ Không bao gồm full game</li>
+                <li class="disable">✖ Không bao gồm full game và antiban</li>
             </ul>
         </div>
 
@@ -89,7 +89,7 @@
             <ul>
                 <li>✔ Sở hữu vĩnh viễn</li>
                 <li>✔ Update trọn đời</li>
-                <li class="disable">✖ Không bao gồm full game</li>
+                <li class="disable">✖ Không bao gồm antiban</li>
             </ul>
         </div>
 
@@ -119,6 +119,7 @@
 
 </body>
 </html>
+
 
 
 
